:old-project-url: {github-url}/sorairolake/rscrypt
:old-compare-url: {old-project-url}/compare
:old-issue-url: {old-project-url}/issues
:old-pull-request-url: {old-project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/scryptenc-cli-v0.7.11\...scryptenc-cli-v0.7.12[0.7.12] - 2024-04-17

=== Changed

* Change to remove unnecessary files from the book
  ({pull-request-url}/255[#255])

== {compare-url}/scryptenc-cli-v0.7.10\...scryptenc-cli-v0.7.11[0.7.11] - 2024-04-16

=== Changed

* Update examples in man pages

== {compare-url}/scryptenc-cli-v0.7.9\...scryptenc-cli-v0.7.10[0.7.10] - 2024-02-18

=== Changed

* Bump MSRV to 1.74.0 ({pull-request-url}/163[#163])

== {compare-url}/scryptenc-cli-v0.7.8\...scryptenc-cli-v0.7.9[0.7.9] - 2024-01-21

=== Changed

* Add description about behavior of `-h`, `--help` and `--version` in man pages
  ({pull-request-url}/127[#127])

== {project-url}/releases/tag/scryptenc-cli-v0.7.8[0.7.8] - 2024-01-18

=== Changed

* Change the error message when decryption fails
  ({old-pull-request-url}/408[sorairolake/rscrypt#408])
* Merge into repository of `scryptenc` crate ({pull-request-url}/115[#115])
* Remove last blank line of `--version` ({pull-request-url}/120[#120])

== {old-compare-url}/v0.7.6\...v0.7.7[0.7.7] - 2024-01-07

=== Changed

* Reduce the target architecture and the archive format for pre-built binaries
  ({old-pull-request-url}/386[sorairolake/rscrypt#386])

== {old-compare-url}/v0.7.5\...v0.7.6[0.7.6] - 2023-12-22

=== Changed

* Update screenshot ({old-pull-request-url}/370[sorairolake/rscrypt#370])

== {old-compare-url}/v0.7.4\...v0.7.5[0.7.5] - 2023-12-20

=== Changed

* Replace demo video with screenshot
  ({old-pull-request-url}/365[sorairolake/rscrypt#365])

== {old-compare-url}/v0.7.3\...v0.7.4[0.7.4] - 2023-12-07
