@@ -3,7 +3,6 @@
 // SPDX-License-Identifier: GPL-3.0-or-later
 
 use std::{
-    ffi::OsString,
     fmt,
     io::{self, Write},
     ops::Deref,
@@ -179,7 +178,7 @@ pub struct Encrypt {
     /// Note that storing a passphrase in an environment variable can be a
     /// security risk.
     #[arg(long, value_name("VAR"), group("passphrase"))]
-    pub passphrase_from_env: Option<OsString>,
+    pub passphrase_from_env: Option<String>,
 
     /// Read the passphrase from the file.
     ///
@@ -263,7 +262,7 @@ pub struct Decrypt {
     /// Note that storing a passphrase in an environment variable can be a
     /// security risk.
     #[arg(long, value_name("VAR"), group("passphrase"))]
-    pub passphrase_from_env: Option<OsString>,
+    pub passphrase_from_env: Option<String>,
 
     /// Read the passphrase from the file.
     ///
