@@ -19,6 +19,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/scryptenc-cli-v0.7.12\...HEAD[Unreleased]
+
+=== Changed
+
+* Change `--passphrase-from-env` to take an UTF-8 string as an environment
+  variable key ({pull-request-url}/407[#407])
+
 == {compare-url}/scryptenc-cli-v0.7.11\...scryptenc-cli-v0.7.12[0.7.12] - 2024-04-17
 
 === Changed
